done till video 33 bugs left: product edit mode product image not visible and title not editable

--- a/public/css/adminstyle.css
+++ b/public/css/adminstyle.css
@@ -9,3 +9,17 @@
 #imgPreview {
     margin: 20px;
 }
+
+ul.gallery{
+    padding:0;
+}
+
+ul.gallery li:first-child {
+    margin-left: 0;
+}
+
+ul.gallery li {
+    margin: 20px;
+    display:inline-block;
+    list-style:none;
+}
